--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box;font-family:'Open Sans', sans-serif}
+/*# sourceMappingURL=style.css.map */
