--- a/scss/basic/_reset.scss
+++ b/scss/basic/_reset.scss
@@ -6,3 +6,12 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+
+a {
+    -webkit-tap-highlight-color: transparent;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
