add dishes section with responsivness and sorting system

--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -24,18 +24,7 @@
     }
 
     &__heading {
-        color: $orange;
-        font-size: $font-medium;
-        text-align: center;
-        border-bottom: 2px solid gray;
-        padding-bottom: 10px;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-
-    &__span {
-        border-bottom: 2px solid $orange;
-        padding-bottom: 10px;
+        @include heading($orange);
     }
 
     &__title {
