--- a/scss/layouts/_chefs.scss
+++ b/scss/layouts/_chefs.scss
@@ -45,6 +45,18 @@
         &:hover>.chefs__info {
             transform: translateY(0);
         }
+
+        @media (min-width:576px) {
+            width: 45%;
+        }
+
+        @media (min-width:768px) {
+            width: 40%;
+        }
+
+        @media (min-width:992px) {
+            width: 23%;
+        }
     }
 
     &__chef:nth-child(2) {
