--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -61,6 +61,11 @@
         i {
             padding-right: 10px;
             font-size: 18px;
+            cursor: pointer;
+
+            &:hover {
+                color: yellow;
+            }
 
             @media (min-width:823px) {
                 font-size: 22px;
@@ -136,5 +141,22 @@
             font-size: 20px;
             padding: 0 25px 0 0;
         }
+    }
+}
+
+.scrolled {
+    position: fixed;
+    z-index: 1;
+    width: 100vw;
+    top: 0;
+    left: 0;
+
+    .nav__list {
+        @media (max-width:822px) {
+            height: calc(100vh - 42px);
+            top: 42px;
+        }
+
+
     }
 }
