--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -49,7 +49,7 @@
 
     &__main {
         position: relative;
-        background-image: url('https://belkowski656.github.io/src/bg.jpg');
+        background-image: url('/src/bg.jpg');
         background-size: cover;
         background-position: center 0;
         background-repeat: no-repeat;
