fix problem with background-image

--- a/scss/layouts/_contact.scss
+++ b/scss/layouts/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-    background-image: url(../../src/order-bg.jpg);
+    background-image: url(../src/order-bg.jpg);
     background-size: cover;
     padding-top: 50px;
     padding-bottom: 50px;
