--- a/scss/layouts/_speciality.scss
+++ b/scss/layouts/_speciality.scss
@@ -31,22 +31,22 @@
     }
 
     &__food:nth-child(1) {
-        background-image: url(../../src/img1.jpg);
+        background-image: url(../src/img1.jpg);
 
     }
 
     &__food:nth-child(2) {
-        background-image: url(../../src/img2.jpg);
+        background-image: url(../src/img2.jpg);
 
     }
 
     &__food:nth-child(3) {
-        background-image: url(../../src/img3.jpg);
+        background-image: url(../src/img3.jpg);
 
     }
 
     &__food:nth-child(4) {
-        background-image: url(../../src/img4.jpg);
+        background-image: url(../src/img4.jpg);
 
     }
 
