--- a/scss/layouts/_chefs.scss
+++ b/scss/layouts/_chefs.scss
@@ -1,5 +1,5 @@
 .chefs {
-    background-image: url(../../src/chefs-bg.jpg);
+    background-image: url(../src/chefs-bg.jpg);
     padding-top: 100px;
     background-size: cover;
     background-attachment: fixed;
@@ -35,7 +35,7 @@
         width: 280px;
         height: 400px;
         border: 4px solid $orange;
-        background-image: url(../../src/chef1.jpg);
+        background-image: url(../src/chef1.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -60,15 +60,15 @@
     }
 
     &__chef:nth-child(2) {
-        background-image: url(../../src/chef2.jpg);
+        background-image: url(../src/chef2.jpg);
     }
 
     &__chef:nth-child(3) {
-        background-image: url(../../src/chef3.jpg);
+        background-image: url(../src/chef3.jpg);
     }
 
     &__chef:nth-child(4) {
-        background-image: url(../../src/chef4.jpg);
+        background-image: url(../src/chef4.jpg);
     }
 
     &__info {
