--- a/scss/layouts/_dishes.scss
+++ b/scss/layouts/_dishes.scss
@@ -64,7 +64,7 @@
     &__img {
         width: 100%;
         height: 100%;
-        background-image: url(../../src/sandwich1.jpg);
+        background-image: url(../src/sandwich1.jpg);
         background-size: cover;
     }
 
