--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -11,7 +11,7 @@
     &::before {
         position: absolute;
         content: "";
-        background-image: url(../../src/shape-top.png);
+        background-image: url(../src/shape-top.png);
         background-repeat: no-repeat;
         width: 1920px;
         height: 180px;
