--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -49,7 +49,7 @@
 
     &__main {
         position: relative;
-        background-image: url('/src/bg.jpg');
+        background-image: url('../src/bg.jpg');
         background-size: cover;
         background-position: center 0;
         background-repeat: no-repeat;
@@ -115,7 +115,7 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        background-image: url(../../src/shape-bottom.png);
+        background-image: url(../src/shape-bottom.png);
         height: 119px;
         width: 1920px;
         animation: clouds 20s linear infinite;
