--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,13 +1,14 @@
 //colors
-$orange:#e84118;
-$gray:#333;
-$gray-second:#2c3e50;
+$blue:#0154f7;
+$blue-second:#3b7eff;
+$gray:#4c4c4d;
+$gray-second:#587EAC;
+$red:#ef5b51;
+$red:#ff6f00;
 
-//font sizes
-$font-big: 44px;
-$font-medium: 31px;
-$font-standard: 18px;
+//font-size
+$font-mega: 67px;
+$font-big: 26px;
+$font-medium: 20px;
+$font-standard: 15px;
 $font-small: 13px;
-
-//padding
-$padding-mobile:10px 15px;
