--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,3 @@
-@import './basic/_reset.scss';
-@import './variables/_variables-main.scss';
-@import './layouts/_layouts-main.scss';
+@import './basic/reset';
+@import './variables/variables-main';
+@import './layouts/layouts-main';
