--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,8 +1,47 @@
 .header {
-    background-image: url(../src/img1.jpg);
-    background-size: cover;
     height: 80vh;
     position: relative;
+    width: 100%;
+    overflow: hidden;
+
+    @media (min-width:992px) {
+        height: 98vh;
+    }
+
+    &__img-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        transform: translateX(-20%);
+
+        @media (orientation:landscape) {
+            height: auto;
+            width: 100%;
+            transform: translateX(0);
+        }
+
+        @media (min-width:768px) {
+            width: 120%;
+        }
+
+        @media (min-width:992px) {
+            width: 140%;
+            transform: translate(-20%, -20%);
+        }
+    }
+
+    &__img-bg:nth-of-type(1) {
+        animation: slide 36s 24s linear infinite;
+    }
+
+    &__img-bg:nth-of-type(2) {
+        animation: slide 36s 12s linear infinite;
+    }
+
+    &__img-bg:nth-of-type(3) {
+        animation: slide 36s linear infinite;
+    }
 
     &::after {
         position: absolute;
@@ -10,13 +49,90 @@
         left: 0;
         content: '';
         width: 100%;
-        height: 80vh;
-        background-color: rgb(206, 106, 106);
-        opacity: .6;
+        height: 100%;
+        background-color: darkcyan;
+        opacity: .5;
     }
 
     &__box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         text-align: center;
-        padding-top: 150px;
+        width: 300px;
+        z-index: 1;
+        color: white;
+        animation: box 12s infinite linear;
+
+        @media (min-width:992px) {
+            width: 500px;
+        }
+    }
+
+    &__h2 {
+        font-size: 40px;
+        margin-bottom: 20px;
+
+        @media (min-width:992px) {
+            font-size: $font-mega;
+        }
+    }
+
+    &__p {
+        font-size: $font-small;
+        line-height: 180%;
+        margin-bottom: 20px;
+    }
+
+    &__btn {
+        @include btn;
+    }
+
+}
+
+@keyframes slide {
+    0% {
+        opacity: 1;
+    }
+
+    27.75% {
+        opacity: 1;
+    }
+
+    33.33% {
+        opacity: 0;
+    }
+
+    94.44% {
+        opacity: 0;
+    }
+
+    94.45% {
+        opacity: 1;
+        z-index: -1;
+    }
+
+    100% {
+        opacity: 1;
+        z-index: -1;
+    }
+}
+
+@keyframes box {
+    0% {
+        opacity: 1;
+    }
+
+    83.33% {
+        opacity: 1;
+    }
+
+    91.66% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
     }
 }
