--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -4,7 +4,7 @@ $blue-second:#3b7eff;
 $gray:#4c4c4d;
 $gray-second:#587EAC;
 $red:#ef5b51;
-$red:#ff6f00;
+$orange:#ff6f00;
 
 //font-size
 $font-mega: 67px;
