ad how-it-works section with responsivness

--- a/scss/layouts/_layouts-main.scss
+++ b/scss/layouts/_layouts-main.scss
@@ -1,5 +1,6 @@
-@import '_nav';
-@import '_header';
-@import '_stats';
-@import '_statement';
-@import '_what-we-do';
+@import 'nav';
+@import 'header';
+@import 'stats';
+@import 'statement';
+@import 'what-we-do';
+@import 'how-it-works';
