--- a/scss/variables/_mixins.scss
+++ b/scss/variables/_mixins.scss
@@ -7,6 +7,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: .3s linear;
+    font-family: 'Poppins';
 
     &:hover {
         background-color: transparent;
