--- a/scss/layouts/_how-it-works.scss
+++ b/scss/layouts/_how-it-works.scss
@@ -107,5 +107,9 @@
         font-size: 18px;
         font-weight: bold;
         margin-top: 30px;
+
+        &:hover {
+            color: white;
+        }
     }
 }
