--- a/scss/layouts/_what-we-do.scss
+++ b/scss/layouts/_what-we-do.scss
@@ -141,6 +141,7 @@
         &:hover {
             background-color: $blue;
             border-color: $blue;
+            color: white;
         }
     }
 }
