--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -15,15 +15,14 @@
             content: '';
             left: 0;
             top: 45px;
-            width: 1920px;
+            width: 100%;
             height: 1px;
             background-color: $gray;
         }
     }
 
     @media (min-width:1920px) {
-        left: 50%;
-        transform: translateX(-50%);
+        left: calc(50% - 1920px/2);
     }
 
 
