--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -32,12 +32,22 @@
     }
 
     &__box {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #fff;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 0 20px;
-        padding: 15px 0;
+        padding: 15px;
         z-index: 2;
+        transition: .3s linear;
+
+        @media (min-width:1200px) {
+            position: static;
+            background-color: transparent;
+        }
     }
 
     &__line {
@@ -131,7 +141,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 80vw;
+        width: 60vw;
         height: 100vh;
         background-color: white;
         padding: 0 20px;
@@ -140,7 +150,7 @@
         transition: .3s linear;
         overflow-y: scroll;
 
-        @media (min-width:768px) and (orientation:portrait) {
+        @media (orientation:landscape) {
             width: 40vw;
         }
 
@@ -235,7 +245,7 @@
     background-color: white;
     color: black;
     margin: 0;
-    padding: 15px;
+    padding: 25px 20px;
     z-index: 2;
 
     .nav__phone {
