--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -1,6 +1,10 @@
 .nav {
-    max-width: 1920px;
     z-index: 2;
+
+    &__container {
+        max-width: 1920px;
+        margin: 0 auto;
+    }
 
     @media (min-width:1200px) {
         background-color: rgba(0, 0, 0, .2);
@@ -19,16 +23,6 @@
             height: 1px;
             background-color: $gray;
         }
-    }
-
-    @media (min-width:1920px) {
-        left: calc(50% - 1920px/2);
-    }
-
-
-    &__container {
-        max-width: 1750px;
-        margin: 0 auto;
     }
 
     &__box {
@@ -96,7 +90,8 @@
         }
     }
 
-    &__logo {
+    &__logo--a {
+        text-decoration: none;
         font-size: 24px;
         font-weight: bold;
         color: $gray;
@@ -131,6 +126,7 @@
         font-size: 30px;
         color: $gray;
         cursor: pointer;
+        border: none;
 
         @media (min-width:1200px) {
             display: none;
@@ -256,7 +252,7 @@
         color: black;
     }
 
-    .nav__logo {
+    .nav__logo--a {
         color: black;
     }
 }
